# Fertilizer-Tracker

./: README.md  app.py  gemini_farming_assistant.py  pyproject.toml  replit.md  requirements.txt
instance/: fertilizer_tracker.db
static/css/: style.css
templates/: add_bill.html  add_comprehensive_expense.html  add_fertilizer.html  add_field.html  add_supplier.html  admin_dashboard.html  admin_user_details.html  ai_chat.html  base.html  comprehensive_dashboard.html  floating_chat_widget.html  import_data.html  index.html  login.html  manage_fields.html  manage_suppliers.html  register.html
