[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-login>=0.6.3",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "wtforms>=3.2.1",
    "werkzeug>=3.1.3",
    "email-validator>=2.3.0",
    "google-genai>=1.36.0",
    "sqlalchemy>=2.0.43",
    "markdown>=3.9",
    "pydantic>=2.11.8",
    "sift-stack-py>=0.8.5",
]
